# PAAB

./: CONTRIBUTING.md  Dockerfile  PSYCHOPY_INTEGRATION_COMPLETE.md  README.md  check_app_status.py  comprehensive_psychopy_demo.py  demo_app.py  docker-compose.yml  launch_studio.py  psychopy_demo_simple.py  pyproject.toml  readme_update.json  requirements.txt  run_studio.py  test_app.py  test_streamlit.py
docs/: getting-started.md
examples/: advanced_research_pipeline.py  basic_research_crew.py  psychopy_integration_demo.py
management/: setup_environment.py
scripts/: docker-entrypoint.sh  healthcheck.sh
src/: __init__.py
src/agents/: base.py  learning.py  psychopy_agents.py  specialized.py
src/cli/: main.py
src/crews/: base.py
src/deployment/: cloud.py
src/flows/: base.py
src/integrations/: llm_providers.py
src/memory/: base.py
src/psychopy_integration/: core.py  data_collection.py  experiments.py  hardware.py  stimuli.py
src/runtime/: executor.py  monitoring.py
src/studio/: main.py
src/studio/pages/: 👥_Crews.py  📝_Tasks.py  🚀_Execution.py  🤖_Agents.py  🧠_PsychoPy_Experiments.py
src/tasks/: base.py  psychopy_tasks.py
src/tools/: base.py  llm_tools.py
tests/: test_basic_functionality.py
